# netbox-idrac-inventory

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: ci_configuration.py
.github/workflows/: ci.yml
dev/: .env.example  Dockerfile  README.md  add_servers.py  configuration.py  docker-compose.yml  smoke_test.py
netbox_idrac_inventory/: __init__.py  choices.py  filtersets.py  forms.py  jobs.py  models.py  navigation.py  signals.py  tables.py  template_content.py  urls.py  utils.py  views.py
netbox_idrac_inventory/api/: serializers.py  urls.py  views.py
netbox_idrac_inventory/graphql/: schema.py  types.py
netbox_idrac_inventory/idrac/: client.py  discovery.py  sync.py
netbox_idrac_inventory/migrations/: 0001_initial.py
netbox_idrac_inventory/templates/netbox_idrac_inventory/: dellcomponent.html  dellscanrange.html  dellserver.html  dellserver_list.html  device_extension.html
netbox_idrac_inventory/tests/: query_counts.json  test_api.py  test_discovery.py  test_forms.py  test_idrac.py  test_models.py  test_utils.py  test_views.py
